--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,10 @@
     <meta charset="utf-8">
     <title>React Basic Setup</title>
     <!-- change this up! http://www.bootstrapcdn.com/bootswatch/ -->
+    <link href="/dist/css/open-iconic-bootstrap.min.css" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/cosmo/bootstrap.min.css" type="text/css" rel="stylesheet"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Nunito:300,400,600" rel="stylesheet">
   </head>
 
   <body>
